<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <TextView
        android:id="@+id/txtDescricaoUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DescricaoUsuarios" />

    <EditText
        android:id="@+id/editBuscaUsuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/txtBusca" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnUsuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BuscarUsuario" />

    <ListView
        android:id="@+id/listBuscaUsuarios"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1" >
    </ListView>

</LinearLayout>
