<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtDescricaoRepositorios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DescricaoRepositorios" />

    <EditText
        android:id="@+id/editBuscaRepositorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/txtRepositorios" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnRepositorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BuscarRepositorio" />

    <ListView
        android:id="@+id/listBuscasRepositorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
